<resources>
    <string name="app_name">HealthChaser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">user</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_summary">Summary</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_meals">Meals</string>
    <string name="menu_mood">Mood</string>
    <string name="menu_water">Water</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_restroom">Restroom</string>
    <string name="menu_hygiene">Hygiene</string>
    <string name="menu_meditation">Meditation</string>
    <string name="menu_inspiration">Inspiration</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
