<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_sleep"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_sleep" />
        <item
            android:id="@+id/navigation_menu_meals"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_meals" />
        <item
            android:id="@+id/navigation_menu_mood"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_mood" />
        <item
            android:id="@+id/navigation_menu_water"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_water" />
        <item
            android:id="@+id/navigation_menu_exercise"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/navigation_menu_restroom"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_restroom" />
        <item
            android:id="@+id/navigation_menu_hygiene"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_hygiene" />
        <item
            android:id="@+id/navigation_menu_meditation"
            android:icon="@drawable/ic_book_24dp"
            android:title="@string/menu_meditation" />
    </group>

    <item android:title="@string/menu_extra">
        <menu>
            <item
                android:id="@+id/navigation_menu_inspiration"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_inspiration" />
        </menu>
    </item>

</menu>
